--- a/javascript/everylang.html
+++ b/javascript/everylang.html
@@ -11,8 +11,8 @@
 <div id="input-area">
     <h3>Enter Players</h3>
     <div class="box">
-        <label>Name<input type="text" id="name"></label>
-        <label>Age<input type="text" id="age"></label>
+        <label>Name <input type="text" id="name"></label>
+        <label>Age <input type="text" id="age"></label>
         <label>Fitness
             <select id="fitness">
                 <option value="1">Fit</option>
@@ -23,8 +23,11 @@
         <button id="adder">Add</button>
     </div>
     <div class="box">
-        <label>Rounds to Play<input type="text" id="rounds"></label>
+        <label>Rounds to Play <input type="text" id="rounds"></label>
         <button id="go">Play</button>
+    </div>
+    <div class="box">
+        <label>Verbose Gameplay <input type="checkbox" id="verbose"></label>
     </div>
 </div>
 
